# mini_rust_desk_scrap

./: Cargo.toml  build.rs
src/: lib.rs
src/common/: aom.rs  codec.rs  convert.rs  dxgi.rs  mod.rs  record.rs  vpxcodec.rs
src/dxgi/: mod.rs
